--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,29 +11,22 @@ build:
   project: Hasher.sln
   parallel: true
   verbosity: normal
+after_build:
+  - ps: |
+      Write-Host "Hello from powershell. Platform is..."
+      Write-Host $env:platform
+      if($env:platform -eq "x86")
+      {
+      copy Hasher\bin\Release\Hasher.zip Hasher.zip
+      copy Bootstrapper\bin\Release\HasherInstaller.exe HasherInstaller.exe
+      }
+      if($env:platform -eq "x64")
+      {
+      copy Hasher\bin\x64\Release\Hasher.amd64.zip Hasher.amd64.zip
+      copy Bootstrapper\bin\x64\Release\HasherInstaller.amd64.exe HasherInstaller.amd64.exe
+      }
 artifacts:
 - path: Hasher.zip
 - path: HasherInstaller.exe
 - path: Hasher.amd64.zip
 - path: HasherInstaller.amd64.exe
-on_success:
-- ps: >-
-    if($env:platform -eq "x86")
-
-    {
-
-    copy Hasher\bin\Release\Hasher.zip Hasher.zip
-
-    copy Bootstrapper\bin\Release\HasherInstaller.exe HasherInstaller.exe
-
-    }
-
-    if($env:platform -eq "x64")
-
-    {
-
-    copy Hasher\bin\x64\Release\Hasher.amd64.zip Hasher.amd64.zip
-
-    copy Bootstrapper\bin\x64\Release\HasherInstaller.amd64.exe HasherInstaller.amd64.exe
-
-    }
