Fix artifact paths again, don't dupe them

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,16 +15,11 @@ after_build:
   - ps: |
       if($env:platform -eq "x86")
       {
-      Push-AppveyorArtifact Hasher\bin\x86\Release\Hasher.zip -FileName Hasher.zip
-      Push-AppveyorArtifact Bootstrapper\bin\Release\HasherInstaller.exe -FileName HasherInstaller.exe
+      Push-AppveyorArtifact .\Hasher\bin\x86\Release\Hasher.x86.zip -FileName Hasher.zip
+      Push-AppveyorArtifact .\Bootstrapper\bin\Release\HasherInstaller.exe -FileName HasherInstaller.exe
       }
       if($env:platform -eq "x64")
       {
-      Push-AppveyorArtifact Hasher\bin\x64\Release\Hasher.amd64.zip -FileName Hasher.amd64.zip
-      Push-AppveyorArtifact Bootstrapper\bin\x64\Release\HasherInstaller.amd64.exe -FileName HasherInstaller.amd64.exe
+      Push-AppveyorArtifact .\Hasher\bin\x64\Release\Hasher.amd64.zip -FileName Hasher.amd64.zip
+      Push-AppveyorArtifact .\Bootstrapper\bin\x64\Release\HasherInstaller.amd64.exe -FileName HasherInstaller.amd64.exe
       }
-artifacts:
-- path: Hasher.zip
-- path: HasherInstaller.exe
-- path: Hasher.amd64.zip
-- path: HasherInstaller.amd64.exe
