--- a/Hasher/Hasher.csproj
+++ b/Hasher/Hasher.csproj
@@ -13,70 +13,52 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <IntermediateOutputPath>$(BaseIntermediateOutputPath)$(Platform)\$(Configuration)\</IntermediateOutputPath>
+    <OutputPath>bin\$(Platform)\$(Configuration)</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)$(Configuration)\</IntermediateOutputPath>
-    <OutputPath>bin\$(Configuration)</OutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ZipPlatformName>
-    </ZipPlatformName>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)$(Configuration)\</IntermediateOutputPath>
-    <OutputPath>bin\$(Configuration)</OutputPath>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <DefineConstants>TRACE</DefineConstants>
-    <ZipPlatformName>
-    </ZipPlatformName>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
     <PlatformTarget>x64</PlatformTarget>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)$(Platform)\$(Configuration)\</IntermediateOutputPath>
-    <OutputPath>bin\$(Platform)\$(Configuration)</OutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ZipPlatformName>.amd64</ZipPlatformName>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
     <PlatformTarget>x64</PlatformTarget>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)$(Platform)\$(Configuration)\</IntermediateOutputPath>
-    <OutputPath>bin\$(Platform)\$(Configuration)</OutputPath>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <DefineConstants>TRACE</DefineConstants>
-    <ZipPlatformName>.amd64</ZipPlatformName>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)$(Platform)\$(Configuration)\</IntermediateOutputPath>
-    <OutputPath>bin\$(Platform)\$(Configuration)</OutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ZipPlatformName>.x86</ZipPlatformName>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)$(Platform)\$(Configuration)\</IntermediateOutputPath>
-    <OutputPath>bin\$(Platform)\$(Configuration)</OutputPath>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <DefineConstants>TRACE</DefineConstants>
-    <ZipPlatformName>.x86</ZipPlatformName>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
@@ -178,7 +160,7 @@
       ]]></Code>
     </Task>
   </UsingTask>
-  <Target Name="BuildPortableZip" AfterTargets="Build" Outputs="$(OutDir)Hasher$(ZipPlatformName).zip" Condition=" '$(OS)' != 'Unix' ">
+  <Target Name="BuildPortableZip" AfterTargets="Build" Outputs="$(OutDir)Hasher.zip" Condition=" '$(OS)' != 'Unix' ">
     <ItemGroup>
       <ZipFiles Include="$(TargetPath)" />
       <ZipFiles Include="$(OutDir)*.dll" />
@@ -187,11 +169,11 @@
         <Name>Hasher.exe.config</Name>
       </ZipFiles>
     </ItemGroup>
-    <Message Text="'@(ZipFiles)' -&gt; '$(OutDir)Hasher$(ZipPlatformName).zip'" />
-    <Zip OutputFileName="$(OutDir)Hasher$(ZipPlatformName).zip" Files="@(ZipFiles)" />
-    <Error Condition="!Exists('$(OutDir)Hasher$(ZipPlatformName).zip')" Text="Unknown error in BuildPortableZip." />
+    <Message Text="'@(ZipFiles)' -&gt; '$(OutDir)Hasher.zip'" />
+    <Zip OutputFileName="$(OutDir)Hasher.zip" Files="@(ZipFiles)" />
+    <Error Condition="!Exists('$(OutDir)Hasher.zip')" Text="Unknown error in BuildPortableZip." />
   </Target>
   <Target Name="CleanZipFile" AfterTargets="Clean">
-    <Delete Files="$(OutDir)Hasher$(ZipPlatformName).zip" />
+    <Delete Files="$(OutDir)Hasher.zip" />
   </Target>
 </Project>
